plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.14'
}

group = 'GroovyStudios.client'
version = '0.0.1'

repositories {
    mavenCentral()
}

dependencies {
    // Cliente HTTP (sin Spring Boot)
    implementation 'org.springframework:spring-web:6.1.3'

    // JavaFX
    implementation 'org.openjfx:javafx-controls:23'
    implementation 'org.openjfx:javafx-fxml:23'

    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

javafx {
    version = "23"
    modules = ['javafx.controls', 'javafx.fxml']
}

application {
    mainClass = 'client.App'
}

tasks.named('test') {
    useJUnitPlatform()
}

run {
    doFirst {
        jvmArgs = [
                '--module-path', configurations.runtimeClasspath.files.join(File.pathSeparator),
                '--add-modules', 'javafx.controls,javafx.fxml'
        ]
    }
}